Fix: Flashy Popover, uneven UI for Tags, Teams and Services page (#2132)

--- a/openmetadata-ui/src/main/resources/ui/src/styles/tailwind.css
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/tailwind.css
@@ -232,8 +232,8 @@
     @apply tw-border-b tw-border-separator;
   }
 
-  .side-panel .activeCategory .tag-category {
-    @apply tw-text-primary tw-font-medium;
+  .activeCategory .label-category {
+    @apply tw-text-primary;
   }
 
   .custom-checkbox {
